# JetRacer-Soccer-League-Year-3

./: README.md
Biweekly Reports/: Readme.md
CAD/JetRacer/: ZED2_assembly.ipj.old
CAD/JetRacer/Workgroups/NotInProject/: 032-0681-000_1.ipt  032-0696-000_1.ipt  032-0796-000_1.ipt  0402_H040.ipt  0402_H060.ipt  0603_H060.ipt  0603_H100.ipt  064-0267-000_1.ipt  064-0404-000_1.ipt  064-0437-000_1.ipt  074-0221-000_3.ipt  074-0239-000_1.ipt  080-1243-000_3.ipt  080-1263-000_1_OBSOLETE.ipt  080-1263-000_2.ipt  (+110 more)
CAD/STEP/: tamiya_chassis.stp  top_plate.stp
CAD/STL/: tamiya_chassis.stl  top_plate.stl
Deliverables/Biweekly Reports/: Biweekly_Report_Apr13.pptx  Biweekly_Report_Apr27.pptx  Biweekly_Report_Format_02_Feb_2022.pptx  Biweekly_Report_Jan22.pptx  Biweekly_Report_Mar4.pptx  Spring_Gantt_Chart.xlsx  TA_Meet_Apr11.pptx  TA_Meet_Apr18.pptx  TA_Meet_Apr4.pptx  TA_Meet_Apr41.pptx  TA_Meet_Feb12.pptx  TA_Meet_May17.pptx  TA_Meet_May2.pptx  Winter_Gantt_Chart.xlsx
Deliverables/Final Deliverables/: Guidelines For Winter Quarter End Report- Final.docx  Spring_Gantt_Chart.xlsx
Demo/: strike_1.mov
ROS Package/jetracer_direct/: CMakeLists.txt  package.xml  param.yaml
ROS Package/jetracer_direct/launch/: detection.launch  jetracer_direct.launch
ROS Package/jetracer_direct/msg/: motor_msg.msg  objects_msg.msg  objects_stamped_msg.msg  objects_timeout_msg.msg  strategy_msg.msg
ROS Package/jetracer_direct/scripts/: defense.py  detector.py  motor_control.py  search.py  strategy.py  strike.py  turn_180.py
Unity Simulation/: Getting started.md  Installation.md  Setup.md
(+11 files in other folders)
